Методы объектов и контекст вызова.
Методы объектов, this
При объявлении объекта можно указать свойство-функцию
Для доступа к текущему объекту из метода используется ключевое слово this.
Значением this является объект перед «точкой», в контексте которого вызван метод
Использование this гарантирует, что функция работает именно с тем объектом, в контексте которого вызвана.
// а теперь вызовем user.hi или user.bye в зависимости от имени
(user.name == "Вася" ? user.hi : user.bye)(); // undefined
В последней строке примера метод получен в результате выполнения тернарного оператора и тут же вызван. Но this при этом теряется. Поэтому любая операция над результатом операции получения свойства, кроме вызова, приводит к потере контекста.

Преобразование объектов: toString и valueOf
В логическом контексте объект – всегда true.
При строковом преобразовании объекта используется его метод toString. Он должен возвращать примитивное значение, причём не обязательно именно строку.
Для численного преобразования используется метод valueOf, который также может возвратить любое примитивное значение. У большинства объектов valueOf не работает (возвращает сам объект и потому игнорируется), при этом для численного преобразования используется toString.

Создание объектов через "new"
Объекты могут быть созданы при помощи функций-конструкторов:
Любая функция может быть вызвана с new, при этом она получает новый пустой объект в качестве this, в который она добавляет свойства. Если функция не решит возвратить свой объект, то её результатом будет this.
Функции, которые предназначены для создания объектов, называются конструкторами. Их названия пишут с большой буквы, чтобы отличать от обычных.

Дескрипторы, геттеры и сеттеры свойств
Основной метод для управления свойствами – Object.defineProperty.
Он позволяет объявить свойство объекта и, что самое главное, тонко настроить его особые аспекты, которые никак иначе не изменить.

Синтаксис:
Object.defineProperty(obj, prop, descriptor)

Аргументы:
obj О

--- a/courses/others/-learn.javascript/js/array.html
+++ b/courses/others/-learn.javascript/js/array.html
@@ -432,15 +432,12 @@
     console.log(getSums([1, 2, 3, 4, 5])); // результат: 1,3,6,10
 
 
-
-
     /*Проверка на аргумент-undefined*/
     function f(x) {
       console.log(arguments.length ? 1 : 0);
     }
     f(undefined); // 1
     f(); // 0
-
 
 
     // Сумма аргументов
@@ -453,9 +450,8 @@
     }
 
     console.log(sum());
-    console.log(sum(1,2,3,4));
-    console.log(sum(1,4));
-
+    console.log(sum(1, 2, 3, 4));
+    console.log(sum(1, 4));
 
 
     console.log("\n\n\n\n\n\n");
@@ -467,6 +463,36 @@
 
 
     console.log("\n\n\n\n\n\n\n\n\n\n");
+
+
+    // Вызов в контексте массива
+    // Вызов arr[2]() – это обращение к методу объекта obj[method](), в роли obj выступает arr, а в роли метода: 2.
+    // Поэтому, как это бывает при вызове функции как метода, функция arr[2] получит this = arr и выведет массив:
+
+    var arrContext = ["a", "b"];
+
+    arrContext.push(function () {
+      console.log(this);
+    });
+
+    arrContext[2](); // "a","b",function
+
+    // самодеятельность
+    for (let prop of arrContext) {
+      console.log(prop);
+    }
+
+
+
+    console.log("\n\n\n\n\n\n\n\n\n\n");
+
+
+
+
+
+
+
+
 
 
   </script>
